double check support for spree_essentials

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,3 +4,6 @@ en:
       catalog_entries:
         index:
           new_catalog_entry: "New Catalog Entry"
+
+      subnav:
+        product_catalog: "Product Catalog"
